tests/fail/22_unary_minus_str.lang
// ОЖИДАЕТСЯ ОШИБКА: оператор '-' применим только к числам
функция Начало(): целое {
  // Семантический анализатор должен выдать ошибку:
  // "Оператор '-' применим только к числам"
  пост строка s = -"привет";
  вернуть 0;
}
